[gd_scene load_steps=10 format=3 uid="uid://bmq0wm77grmqt"]

[ext_resource type="Script" path="res://assets/prefabs/UI/menu_icon/menu_icon.gd" id="1_a3ljl"]
[ext_resource type="Texture2D" uid="uid://b2jok5dgu2ski" path="res://assets/resources/textures/UI/HUDBox.png" id="1_wlcgb"]
[ext_resource type="Shader" path="res://assets/resources/shaders/menu_icon_bg.gdshader" id="2_55w0n"]
[ext_resource type="Texture2D" uid="uid://bb3sfwpxnixbm" path="res://assets/resources/textures/UI/globe.svg" id="2_hgyyj"]
[ext_resource type="Texture2D" uid="uid://bgon7q72v5gsl" path="res://assets/resources/textures/UI/HUDBoxFull.png" id="3_2gjbk"]
[ext_resource type="Theme" uid="uid://bjh8cqfmixnsq" path="res://assets/resources/theme/main_theme.tres" id="3_v7xq7"]

[sub_resource type="Gradient" id="Gradient_i4lvu"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_7n26o"]
gradient = SubResource("Gradient_i4lvu")
width = 256
height = 256
fill_from = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhhhx"]
resource_local_to_scene = true
shader = ExtResource("2_55w0n")
shader_parameter/cutoff = 0.0
shader_parameter/smooth_size = 0.0
shader_parameter/white_tex = ExtResource("1_wlcgb")
shader_parameter/black_tex = ExtResource("3_2gjbk")
shader_parameter/mask_tex = SubResource("GradientTexture2D_7n26o")

[node name="MenuIcon" type="MarginContainer" node_paths=PackedStringArray("background", "title_container", "title_label", "icons_hbox")]
focus_mode = 2
script = ExtResource("1_a3ljl")
background = NodePath("NinePatchRect")
title_container = NodePath("MarginContainer/HBoxContainer/Control")
title_label = NodePath("MarginContainer/HBoxContainer/Control/Label")
icons_hbox = NodePath("MarginContainer/HBoxContainer")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
material = SubResource("ShaderMaterial_rhhhx")
layout_mode = 2
texture = ExtResource("1_wlcgb")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("2_hgyyj")
stretch_mode = 4

[node name="Control" type="Control" parent="MarginContainer/HBoxContainer"]
clip_contents = true
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -16.5
offset_right = 1.0
offset_bottom = 16.5
grow_vertical = 2
theme = ExtResource("3_v7xq7")
theme_override_font_sizes/font_size = 24

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
